2010-10-01 Dominique Dumont  <domi.dumont@free.fr> 
	* Value.pm: added warn_if_match and warn_unless_match parameters.
	Value will issue a warning if the stored value match (or does not) 
	match a Perl regular expression specified in the model.

2010-09-30 Dominique Dumont  <domi.dumont@free.fr> 1.210
	* renamed config-edit-dep5 in config-edit-dpkg-copyright
	* renamed Debian::Dep5 model to Debian::Dpkg::Copyright
	* renamed Config::Model::Backend::Debian::Dep5 backend to 
	  Config::Model::Backend::Debian::Dpkg::Copyright
	* Factored out code to read/write control files in 
	  Config::Model::Backend::Debian::DpkgSyntax
	* Created model and backend for Debian control files
	* added config-edit-dpkg-control command line

2010-09-20 Dominique Dumont  <domi.dumont@free.fr> 1.209
	* Fixed Debian::Dep5 parser: fixed read issue and added write
	capability

2010-09-16 Dominique Dumont  <domi.dumont@free.fr> 1.208
	* Fixed missing dependencies in Build.PL (Building from hg
	requires Dist::Zilla and Dist-Zilla-Plugins-CJM >= 3.01)

2010-09-14 Dominique Dumont  <domi.dumont@free.fr> 1.207
	* Added Debian's Dep-5 model (with config-edit-dep5 CLI)
	* Value.pm: Added validation of value based on a Parse::RecDescent
	grammar
	* AnyId.pm: Authorized keys can also be based of a
	Parse::RecDescent grammar
	* Node.pm (find_element): returns the element name (if known). Can
	also find the element in a case insensitive manner

2010-07-23  Dominique Dumont  <domi.dumont@free.fr> 1.206

	First version to feature code written during Google Summer of Code 2010.
	For this GSoC, Krzysztof Tyszecki has provided:
	* a new backend for INI file that can:
	    * read and write comments to and from annotations. This way
	      users comments are preserved
	    * read and write parameters that are repeated in the INI file. This
	      repeated parameters will be loaded in list elements
	* the capacity to load annotation from perl data structure