@@ -6,9 +6,10 @@
 use warnings FATAL => qw(all);
 
 use ExtUtils::testlib;
-use Test::More tests => 75 ;
+use Test::More tests => 77 ;
 use Config::Model ;
 use Test::Exception ;
+use Test::Warn ;
 
 use strict;
 
@@ -135,6 +136,20 @@ $model ->create_config_class
 	   index_type  => 'string',
 	   @element ,
 	   ordered  => 1 ,
+	  },
+       hash_with_warn_if_key_match
+       => {
+	   type => 'hash',
+	   index_type  => 'string',
+	   @element ,
+	    warn_if_key_match => 'foo',
+	  },
+       hash_with_warn_unless_key_match
+       => {
+	   type => 'hash',
+	   index_type  => 'string',
+	   @element ,
+	    warn_unless_key_match => 'foo',
 	  },
       ],
    );
@@ -356,3 +371,12 @@ throws_ok { $hwakm->fetch_with_id('bar2') ;} 'Config::Model::Exception::WrongVal
    "check not matching key" ;
 
 ok($hwakm->fetch_with_id('foo22'),"check matching key") ;
+
+# test warnings with keys
+my $hwwikm = $root->fetch_element('hash_with_warn_if_key_match') ;
+warning_like { $hwwikm->fetch_with_id('foo2') ;} qr/key foo2 should not match/,
+   "warn if matching key" ;
+
+my $hwwukm = $root->fetch_element('hash_with_warn_unless_key_match') ;
+warning_like { $hwwukm->fetch_with_id('bar2') ;} qr/key bar2 should match foo/,
+   "warn unless matching key" ;
