@@ -2,6 +2,9 @@
 	* Value.pm: added warn_if_match and warn_unless_match parameters.
 	Value will issue a warning if the stored value match (or does not) 
 	match a Perl regular expression specified in the model.
+	* AnyId.pm: Likewise, added warn_if_key_match and 
+	warn_unless_key_match. 
+	
 
 2010-09-30 Dominique Dumont  <domi.dumont@free.fr> 1.210
 	* renamed config-edit-dep5 in config-edit-dpkg-copyright
